ui design remaining

--- a/src/pages/item-details/item-details.html
+++ b/src/pages/item-details/item-details.html
@@ -1,18 +1,19 @@
 <ion-header>
-  <ion-navbar>
-    <button menuToggle *ngIf="!selectedItem">
+	<ion-navbar>
+		<button menuToggle *ngIf="!selectedItem">
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Item Details</ion-title>
-  </ion-navbar>
+		<ion-title>Item Details, {{ selectedItem.patientName.toUpperCase() }}</ion-title>
+	</ion-navbar>
 </ion-header>
 
 <ion-content>
-  <h3 text-center *ngIf="selectedItem">
-    {{selectedItem.title}}
-    <ion-icon [name]="selectedItem.icon"></ion-icon>
-  </h3>
-  <h4 text-center *ngIf="selectedItem">
-    You navigated here from <b>{{selectedItem.title}}</b>
-  </h4>
+	<div text-center *ngIf="selectedItem">
+		<button ion-item *ngFor="let a of keys(selectedItem)">
+		  {{a}}: {{selectedItem[a]}} <br/>
+		</button>
+		<button style="top : 200px" ion-button color="danger" outline (click)="deleteInd()">
+			Delete
+		</button>
+	</div>
 </ion-content>
