--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -9,12 +9,9 @@
 
 <ion-content>
   <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
-      <ion-icon name="{{item.icon}}" item-left></ion-icon>
-      {{item.title}}
-      <div class="item-note" item-right>
-        {{item.note}}
-      </div>
-    </button>
+	<ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+    <button  ion-item *ngFor="let a of items; let i = index" (click)="itemTapped($event, a, i)">
+	  {{a.patientName}}
+	</button>
   </ion-list>
 </ion-content>
