--- a/src/pages/patient-details/patient-details.html
+++ b/src/pages/patient-details/patient-details.html
@@ -7,34 +7,22 @@
 	</ion-navbar>
 </ion-header>
 
-<ion-content style="background :#398AFF">
+<ion-content class="ion-content">
 	<div text-center *ngIf="selectedItem">
-		<div style="color : white;background :#398AFF" ion-item   *ngFor="let a of keys(selectedItem)" >
-			
-			<div style="background :#398AFF;display: flex;justify-content: space-between;">  
-			<span >
+		<div class="parent-div" ion-item *ngFor="let a of keys(selectedItem)">
+
+			<div class="child-div">
+				<span>
 				{{a}} :
 			</span>
-			<span >
+				<span>
 				{{selectedItem[a]}}
 			</span>
+			</div>
 		</div>
-		</div>
-		<!-- <table>
-			<tr *ngFor="let a of keys(selectedItem)" style="width: 100vw;padding : 30px;color :white;display: table-row;">
-				<td style="padding : 35px"></td> -->
-				<!-- <hr style="color :white"> -->
-				<!-- <td style="padding : 35px">:</td> -->
-				<!-- <hr> -->
-				<!-- <td style="padding : 35px;"></td>
-			</tr>
-		</table> -->
-		<!-- <button style="color :white;background :#398AFF" ion-item *ngFor="let a of keys(selectedItem)">
-		  {{a}}: {{selectedItem[a]}} <br/>
-		</button> -->
-		<button style="top : 200px;background:red;color:white;width : 100px" ion-button color="danger" (click)="deleteInd()">
+
+		<button class="button-delete" ion-button color="danger" (click)="deleteInd()">
 			Delete
 		</button>
-		<!-- <button ion-button style="background :#03A9F4;width: 100px;" (click)="addPatient()">Submit</button> -->
 	</div>
 </ion-content>
